--- a/scss/_tooltip.scss
+++ b/scss/_tooltip.scss
@@ -17,8 +17,6 @@
   .tooltip-arrow {
     position: absolute;
     display: block;
-    width: $tooltip-arrow-width;
-    height: $tooltip-arrow-height;
 
     &::before {
       position: absolute;
@@ -29,9 +27,27 @@
   }
 }
 
-.bs-tooltip-top {
+%bs-tooltip-top,
+%bs-tooltip-bottom {
   padding: $tooltip-arrow-height 0;
 
+  .tooltip-arrow {
+    width: $tooltip-arrow-width;
+    height: $tooltip-arrow-height;
+  }
+}
+
+%bs-tooltip-right,
+%bs-tooltip-left {
+  padding: 0 $tooltip-arrow-height;
+
+  .tooltip-arrow {
+    width: $tooltip-arrow-height;
+    height: $tooltip-arrow-width;
+  }
+}
+
+%bs-tooltip-top {
   .tooltip-arrow {
     bottom: 0;
 
@@ -43,13 +59,9 @@
   }
 }
 
-.bs-tooltip-right {
-  padding: 0 $tooltip-arrow-height;
-
+%bs-tooltip-right {
   .tooltip-arrow {
     left: 0;
-    width: $tooltip-arrow-height;
-    height: $tooltip-arrow-width;
 
     &::before {
       right: 0;
@@ -59,9 +71,7 @@
   }
 }
 
-.bs-tooltip-bottom {
-  padding: $tooltip-arrow-height 0;
-
+%bs-tooltip-bottom {
   .tooltip-arrow {
     top: 0;
 
@@ -73,13 +83,9 @@
   }
 }
 
-.bs-tooltip-left {
-  padding: 0 $tooltip-arrow-height;
-
+%bs-tooltip-left {
   .tooltip-arrow {
     right: 0;
-    width: $tooltip-arrow-height;
-    height: $tooltip-arrow-width;
 
     &::before {
       left: 0;
@@ -89,18 +95,19 @@
   }
 }
 
-.bs-tooltip-auto {
+// stylelint-disable-next-line no-duplicate-selectors
+.tooltip {
   &[data-popper-placement^="top"] {
-    @extend .bs-tooltip-top;
+    @extend %bs-tooltip-top;
   }
   &[data-popper-placement^="right"] {
-    @extend .bs-tooltip-right;
+    @extend %bs-tooltip-right;
   }
   &[data-popper-placement^="bottom"] {
-    @extend .bs-tooltip-bottom;
+    @extend %bs-tooltip-bottom;
   }
   &[data-popper-placement^="left"] {
-    @extend .bs-tooltip-left;
+    @extend %bs-tooltip-left;
   }
 }
 
